# sakai_direct

./: .gitignore  README.md  setup.cfg
examples/: list_assignments.py
src/sakai_direct/: __init__.py  sakai_direct.py
src/sakai_direct/examples/: gradebook_example1.py
