[metadata]
name = sakai_direct
version = 0.0.2
author = Craig Balfour
author_email = craig.balfour@uct.ac.za
description = A sakai direct API client implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbalfour/sakai_direct
project_urls =
    Bug Tracker = https://github.com/cbalfour/sakai_direct/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.packages.find]
where = src
